images内部文件名，修改成英文。

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="content">
             <div class="msg">
                 <div class="user-logo">
-                    <img style="width: 100%" src="images/头像.png">
+                    <img style="width: 100%" src="images/user.png">
                 </div>
                 <div class="user-msg">
                     <p class="name">高素雅 51岁</p>
